# the-art-of-2048

./: .gitignore  Dockerfile  LICENSE  README.md
code/app/local_app/: pyproject.toml
code/app/local_app/src/app2048/: __main__.py  game_loop.py
code/backend/: pyproject.toml
code/backend/src/: grid.py  local_storage_manager.py
code/backend/src/backend/: __main__.py  game_manager.py
code/backend/src/backend/implementations/: in_process_comm.py
code/backend/src/backend/interface/: communication.py
code/backend/src/game_backend/: __main__.py  game_manager.py
code/backend/src/game_backend/core/array_backend/: __init__.py  grid.py  tile.py
code/backend/src/game_backend/core/comm/: __init__.py  in_process_comm.py
code/backend/src/game_backend/implementations/: array_grid.py  array_tile.py  in_process_comm.py
code/backend/src/game_backend/interface/: grid.py
code/backend/src/game_backend/services/: __init__.py  api_server.py  game_manager.py  local_storage_manager.py  static_server.py
code/backend/src/implementations/: array_grid.py  array_tile.py
code/backend/src/interface/: grid.py  tile.py
code/frontend/cli/: pyproject.toml
code/frontend/cli/src/cli_frontend/: __init__.py  __main__.py  game_loop.py  input_handler.py  renderer.py  utils.py  ws_comm.py
code/frontend/web/web-2048-frontend/: package-lock.json  package.json
code/frontend/web/web-2048-frontend/src/: App.tsx  index.css
code/frontend/web/web-2048-frontend/src/components/: GameGrid.tsx  ScoreBoard.tsx
docker/: Dockerfile.backend
(+2 files in other folders)
