[project]
name = "app2048"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mag1cfrog", email = "harrywong2017@gmail.com"},
]
dependencies = ["fastapi>=0.115.4", "uvicorn>=0.32.0", "websockets>=13.1"]
requires-python = ">=3.12"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
